# phimaker

./: .gitignore  .gitmodules  Cargo.toml  README.md  big_test.py  output.txt  pylock.toml  pyproject.toml  test.py  torus_test.py
.github/workflows/: python.yml
examples/: big_test.py  cylinder_test.py  lock_free_test.py  test.mat  test.py  test_annotated.mat  timing_test.py  torus_test.py  washboard_test.py
phimaker/: __init__.py  washboard_interface.py
python/phimaker/: __init__.py
src/: builders.rs  cylinder.rs  diagrams.rs  ensemble.rs  indexing.rs  lib.rs  overlap.rs  utils.rs
src/columns/: mod.rs
src/decompositions/: lock_free.rs  mod.rs  rv_decomposition.rs
