[package]
name = "phimaker"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phimaker"
crate-type = ["cdylib"]

[dependencies]
atomic_refcell = "0.1.9"
bincode = "1.3.3"
crossbeam = "0.8.2"
disjoint-sets = "0.4.2"
itertools = "0.10.5"
log = "0.4.20"
lophat = "0.9.1"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
pyo3-log = "0.8.3"
rayon = "1.7.0"
serde = "1.0.160"
serde_json = "1.0.96"
tempfile = "3.5.0"
