[package]
name = "phimaker"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phimaker"
crate-type = ["cdylib"]

[dependencies]
atomic_refcell = "0.1.13"
bincode = "1.3.3"
crossbeam = "0.8.4"
disjoint-sets = "0.4.2"
itertools = "0.14.0" # check
log = "0.4.27"
lophat = "0.11.0"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pyo3-log = "0.12.4"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
tempfile = "3.20.0"
