[build-system]
requires = ["maturin~=1.0"]
build-backend = "maturin"

[project]
name = "phimaker"
requires-python = ">=3.10"
version = "0.3.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# dependencies = [
#     "pyramid==2.0.1"
# ]

[tool.maturin]
# Include additional files
# include = ["python/phimaker/washboard/dist/index.html"]
python-source = "python"
